Closed Bug 560536 Opened 14 years ago Closed 14 years ago

sparc debugger builds running tests very slowly

Categories

(Tamarin Graveyard :: Virtual Machine, defect, P3)

Sun
Solaris
defect

Tracking

(Not tracked)

VERIFIED FIXED
flash10.1-sparc

People

(Reporter: trbaker, Assigned: leon.sha)

References

Details

Attachments

(1 file)

clean new bug for concern expressed in https://bugzilla.mozilla.org/show_bug.cgi?id=551173#c18

Found 2 issues in the testsuite:

debugger builds running the following testcases are EXTREMELY slow. I ended up
killing the run after 5 minutes
- as3/sampling/Callback.abc
- as3/sampling/FunctionEntry.abc

Callback does slowly spit out callback information, but after 5 minutes I
stopped it, should run much faster 
-bash-3.00$ $AVM as3/sampling/Callback.abc
Sampling api: callback
callback1 called at 360
callback1 called at 394
callback1 called at 394
callback1 called at 394
callback1 called at 394
callback1 called at 394
callback1 called at 394
callback1 called at 394
Assignee: nobody → leon.sha
Status: NEW → ASSIGNED
Flags: flashplayer-triage+
Flags: flashplayer-qrb+
Priority: -- → P3
Target Milestone: --- → flash10.1-Sparc
See Also: → 551173
Blocks: 551173
The slow down could be a result of having to compile with -xO2 instead of -xO5 (https://bugzilla.mozilla.org/attachment.cgi?id=438652)
Attached patch patchSplinter Review
It is not caused by the complier option. Solaris is using a different Performance Counter. That is not correct. Should use the same performance counter as linux.
Attachment #446651 - Flags: review?(brbaker)
Comment on attachment 446651 [details] [diff] [review]
patch

change looks okay to me as long as testing is successful.
Attachment #446651 - Flags: review?(edwsmith)
Leon, any idea where the code to use gethrtime() crept in?  I'm wondering if it was there for an important reason that is no longer apparent since we factored VMPI_getPerformanceCounter() into the porting layer.
At very beginning, there is no implementation on unix platform on for Performance Counter. Somehow empty function getPerformanceCounter() seems to work for linux but not for solaris. I add gethrtime() for solaris. The guy who implement this function for general unix later but didn't remove the solaris part. I remember I have removed it before. But seems I didn't do that or it is add back when porting to VMPI.
(In reply to comment #4)
> Leon, any idea where the code to use gethrtime() crept in?  I'm wondering if it
> was there for an important reason that is no longer apparent since we factored
> VMPI_getPerformanceCounter() into the porting layer.
Attachment #446651 - Flags: review?(edwsmith) → review+
Attachment #446651 - Flags: review?(brbaker)
http://hg.mozilla.org/tamarin-redux/rev/eb054fb3ae2a
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Verified that the sampling testcases now run in a normal amount of time, seconds instead of minutes. Removed /skip/ from acceptance testconfig so they will again be executed during acceptance testing in the build system.

tr -> 4732:0effad8c47e9
Status: RESOLVED → VERIFIED
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: