Bug 560536 - sparc debugger builds running tests very slowly. r=edwsmith